--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   go_router: ^14.2.7
   iconsax_plus: ^1.0.0
   bottom_navy_bar: ^6.1.0
+  persistent_bottom_nav_bar: ^6.2.1
+  cached_network_image: ^3.4.1  
 
 
 dev_dependencies:
