--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,14 @@ dependencies:
   riverpod_annotation: ^2.3.5
   card_swiper: ^3.0.1
   flutter_carousel_widget: ^2.3.0
-  go_router: ^14.2.7
   iconsax_plus: ^1.0.0
-  bottom_navy_bar: ^6.1.0
-  persistent_bottom_nav_bar: ^6.2.1
   cached_network_image: ^3.4.1  
+  shared_preferences: ^2.3.2
+  dio: ^5.6.0
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.1
+  flutter_secure_storage: ^8.0.0
+  google_nav_bar: ^5.0.6
 
 
 dev_dependencies:
