--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   riverpod_generator: ^2.4.2
   riverpod_lint: ^2.3.12
+  mockito: ^5.0.0
+  build_runner: ^2.1.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
